# FunRepository

./: README.md  hella.go
CGL/: gl.h  init.c  main.c  main.h  render.c  run.sh  types.c  util.c
CGL/utils/: utils.c  utils.h
LetterBoxed/: .gitignore  Cargo.toml  README.md  embed.py  go.mod  main.go
LetterBoxed/src/: lib.rs  words.rs
LetterBoxed/src/tests/: words.rs
NitroGo/: go.mod  go.sum  main.go
Snake/: Cargo.toml
Snake/src/: main.rs
cbench/: go.mod  main.go  main_test.go
cbench/cbench/: add.c  cbench.go  cbench.h  pow.c  pow.go
cbench/gobench/: gobench.go  pow.go
compress/: .gitignore
compress/src/: main.rs
filler/: Cargo.toml  README.md
filler/src/: board.rs  main.rs  minimax.rs
hella/: README.md  go.mod  go.sum
mazesolve/: go.mod
phi/: .gitignore  go.mod  main.go  realphi.go
splbeesolver/: alg.go  final.txt  go.mod  go.sum  main.go  setup.go  util.go
splendor/: Cargo.toml  README.md  board.txt
splendor/src/: board.rs  main.rs
splendor/src/board/: display.rs  dist.rs  edit.rs  mod.rs  solve.rs
